--- a/index.html
+++ b/index.html
@@ -2,23 +2,39 @@
 <html lang="th">
 <head>
   <meta charset="utf-8" />
-  <title>🌦️ ระบบแนะนำจังหวัดปลอดภัยจากฝนและอุบัติเหตุ 🚗</title>
+  <title>ระบบแนะนำจังหวัดปลอดภัยจากฝนและอุบัติเหตุ</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <script src="script.js" defer></script>
 </head>
+
 <body>
-  <h2>🌦️ ระบบแนะนำจังหวัดปลอดภัยจากฝนและอุบัติเหตุ 🚗</h2>
+  <!-- ================= Header ================= -->
+  <header style="margin-bottom: 24px;">
+    <h1 style="font-size: 26px; color: #1e3a8a; margin-bottom: 6px;">
+      🌦️ ระบบแนะนำจังหวัดปลอดภัยจากฝนและอุบัติเหตุ 🚗
+    </h1>
+    <p style="color: #475569; font-size: 15px;">
+      ตรวจสอบสภาพอากาศ ความเสี่ยงอุบัติเหตุ และข่าวท้องถิ่นของจังหวัดต่าง ๆ แบบเรียลไทม์
+    </p>
+  </header>
 
-  <div style="margin-top:20px;">
-    <input id="province" placeholder="พิมพ์ชื่อจังหวัด เช่น ชลบุรี, เชียงใหม่" />
-    <button onclick="getData()">ดูข้อมูล</button>
-  </div>
+  <!-- ================= Input Section ================= -->
+  <section style="margin-bottom: 16px;">
+    <input
+      id="province"
+      type="text"
+      placeholder="พิมพ์ชื่อจังหวัด เช่น ชลบุรี, เชียงใหม่, กรุงเทพมหานคร"
+    />
+    <button onclick="getData()">🔍 ดูข้อมูล</button>
+  </section>
 
+  <!-- ================= Result Section ================= -->
   <div id="result"></div>
 
-  <hr style="margin-top:30px;margin-bottom:10px;">
-
-  <h3>🗞️ ข่าวท้องถิ่นล่าสุด</h3>
-  <div id="news" style="text-align:left;display:inline-block;max-width:700px;margin-top:10px;"></div>
+  <!-- ================= Footer ================= -->
+  <footer style="margin-top: 40px; color: #64748b; font-size: 13px;">
+    © 2025 BUU Informatics – ระบบอัจฉริยะเพื่อความปลอดภัยในการเดินทาง 🌏
+  </footer>
 </body>
 </html>
