--- a/index.html
+++ b/index.html
@@ -24,8 +24,89 @@
     <input
       id="province"
       type="text"
+      list="provinceList"
       placeholder="พิมพ์ชื่อจังหวัด เช่น ชลบุรี, เชียงใหม่, กรุงเทพมหานคร"
     />
+    <datalist id="provinceList">
+      <option value="กรุงเทพมหานคร">
+      <option value="กระบี่">
+      <option value="กาญจนบุรี">
+      <option value="กาฬสินธุ์">
+      <option value="กำแพงเพชร">
+      <option value="ขอนแก่น">
+      <option value="จันทบุรี">
+      <option value="ฉะเชิงเทรา">
+      <option value="ชลบุรี">
+      <option value="ชัยนาท">
+      <option value="ชัยภูมิ">
+      <option value="ชุมพร">
+      <option value="เชียงราย">
+      <option value="เชียงใหม่">
+      <option value="ตรัง">
+      <option value="ตราด">
+      <option value="ตาก">
+      <option value="นครนายก">
+      <option value="นครปฐม">
+      <option value="นครพนม">
+      <option value="นครราชสีมา">
+      <option value="นครศรีธรรมราช">
+      <option value="นครสวรรค์">
+      <option value="นนทบุรี">
+      <option value="นราธิวาส">
+      <option value="น่าน">
+      <option value="บึงกาฬ">
+      <option value="บุรีรัมย์">
+      <option value="ปทุมธานี">
+      <option value="ประจวบคีรีขันธ์">
+      <option value="ปราจีนบุรี">
+      <option value="ปัตตานี">
+      <option value="พระนครศรีอยุธยา">
+      <option value="พะเยา">
+      <option value="พังงา">
+      <option value="พัทลุง">
+      <option value="พิจิตร">
+      <option value="พิษณุโลก">
+      <option value="เพชรบุรี">
+      <option value="เพชรบูรณ์">
+      <option value="แพร่">
+      <option value="ภูเก็ต">
+      <option value="มหาสารคาม">
+      <option value="มุกดาหาร">
+      <option value="แม่ฮ่องสอน">
+      <option value="ยโสธร">
+      <option value="ยะลา">
+      <option value="ร้อยเอ็ด">
+      <option value="ระนอง">
+      <option value="ระยอง">
+      <option value="ราชบุรี">
+      <option value="ลพบุรี">
+      <option value="ลำปาง">
+      <option value="ลำพูน">
+      <option value="เลย">
+      <option value="ศรีสะเกษ">
+      <option value="สกลนคร">
+      <option value="สงขลา">
+      <option value="สตูล">
+      <option value="สมุทรปราการ">
+      <option value="สมุทรสงคราม">
+      <option value="สมุทรสาคร">
+      <option value="สระแก้ว">
+      <option value="สระบุรี">
+      <option value="สิงห์บุรี">
+      <option value="สุโขทัย">
+      <option value="สุพรรณบุรี">
+      <option value="สุราษฎร์ธานี">
+      <option value="สุรินทร์">
+      <option value="หนองคาย">
+      <option value="หนองบัวลำภู">
+      <option value="อ่างทอง">
+      <option value="อำนาจเจริญ">
+      <option value="อุดรธานี">
+      <option value="อุตรดิตถ์">
+      <option value="อุทัยธานี">
+      <option value="อุบลราชธานี">
+    </datalist>
+
     <button onclick="getData()">🔍 ดูข้อมูล</button>
   </section>
 
